# lightmail

./: .clang-format  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GARBAGE_COLLECTOR.md  LICENSE  Makefile.am  README.md  RFC_COMPLIANCE.md  STORAGE.md  config.ini.example  configure.ac  lightmail.conf.example  readme.md  test_imap.sh
.github/workflows/: cmake-single-platform.yml
docs/: API.md  REQUIREMENTS_MATRIX.md
include/: auth.h  conf.h  config.h  config.h.in~  db.h  imap-client.h  imap-parser.h  imap-ssl.h  imap.h  lightmail.h  lmtp.h  lmtp_queue.h  lmtp_session.h  lock.h  log.h  mailbox.h  metrics.h  parser.h  password.h  pop3.h  runtime.h  s3.h  shutdown.h
sql/: V2__schema_upgrade.sql  init_data.sql  schema.sql
src/: Makefile.am  lib.rs  lightmail  lightmail.c  main.rs  runtime.rs  shutdown.c
src/_core/: config.c  lock.c  password.c  runtime.c
src/_imap/: imap-client.c  imap-parser.c  imap-ssl.c  imap.c
src/_log/: log.c
src/_metrics/: memory_sampler.c
src/_storage/: db-account.c  db-mailbox.c
src/api/: mod.rs
src/config/: config.c
src/core/: auth.c  config.c  lock.c  mailbox.c  shutdown.c
src/imap/: imap-client.c  imap-send.c  imap-ssl.c  imap.c
src/lib/: auth.c  db.c  password.c  s3.c
src/lmtp/: lmtp.c  lmtp_session.c  queue.c
src/log/: log.c
src/metrics/: memory_sampler.c  metrics.c
src/net/: listener.rs
src/pop3/: pop3.c
src/protocol/: mod.rs
src/protocol/imap/: command.rs  handler.rs  mod.rs  parser.rs  state.rs
src/protocol/imap/command/: mod.rs  state.rs
src/protocol/lmtp/: handler.rs  mod.rs
src/protocol/pop3/: handler.rs  mod.rs
src/protocol/smtp/: mod.rs  server.rs
src/servers/: _server.c  imap.c  imap_send.c
src/storage/: db-account.c  db-mailbox.c  db-message.c  db.c  db.rs  mod.rs  s3.c  s3.rs
src/storage/models/: account.rs  calendar.rs  mailbox.rs  message.rs  mod.rs  object.rs
src/storage/models/account/: mod.rs  state.rs
src/storage/models/mailbox/: mod.rs  state.rs
src/utils/: config.rs  garbage.rs  mod.rs  webhook.rs
tests/: run_tests.sh  test_hash_password.c  test_lmtp_queue.c  test_lmtp_saturation.c  test_lmtp_worker_db.c  test_logger.c  test_logger_clear.c  test_memory_sampler.c  test_metrics.c  test_parse_command.c  test_s3.c  test_s3_key.c  test_s3_key_stub.c  test_stubs.c
