[package]
name = "lightmail"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7.17"
tokio-native-tls = "0.3.1"
sqlx = { version = "0.7", features = ["runtime-tokio","mysql","macros","chrono"] }
bytes = "1.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
anyhow = "1.0.100"
mail-parser = "0.11.1"
uuid =  {version = "1.19.0", features = ["v7"]}
chrono = { version = "0.4.42", features = ["serde"] }
percent-encoding = "2.3.2"
aws-sdk-s3 = "1.119.0"
aws-config = "1.8.12"
serde_json = "1.0.148"
parking_lot = "0.12.5"
nom = "8.0.0"
rustls = "0.23.35"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
bcrypt = "0.17.1"
axum = "0.8.8"
 tower-http = { version = "0.6.8", features = ["trace"] }
clamav-client = { version = "2.2.0", features = ["tokio-stream"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
